--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
-title: 简历 - Java 开发工程师 - 张二狗
+title: 简历 - CFD 开发工程师 - 闻韬
 
 aboutme:
-  name: 张二狗 / ErGouZhang
+  name: 闻韬 / Tao Wen
   sex: 男
   age: 25
-  email: ergouzhang@gmail.com
-  phone: 18866668888
-  github: https://github.com/rgz
+  email: i@lanceir.com
+  phone: 17865197931
+  github: https://github.com/lanceir
   city: 北京
-  job: 算法工程师
-  edu: 本科
+  university: 中国科学院大学 中丹学院
+  edu: 硕士
+  research filed: CFD，IBM，煤燃烧
 
-update: 2020年05月24日
+update: 2020年05月25日
