--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ aboutme:
   phone: 17865197931
   github: https://github.com/lanceir
   city: 北京
-  university: 中国科学院大学 中丹学院
+  university: 中国科学院大学 / Technical University of Danmark 
   edu: 硕士
   research filed: CFD，IBM，煤燃烧
 
