--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,6 @@ aboutme:
   city: 北京
   university: 中国科学院大学 / Technical University of Danmark 
   edu: 硕士
-  research field: CFD，IBM，煤燃烧
+  research: CFD，IBM，煤燃烧
 
 update: 2020年05月25日
