--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 title: 简历 - 闻韬
 
 aboutme:
-  name: 闻韬 / Tao Wen
+  name: 闻韬 
   sex: 男
   birth: 1996.08
   city: 浙江嘉兴
   policy: 共青团员
-  university: 中国科学院大学 / Technical University of Danmark
+  university: 中国科学院大学 / 丹麦技术大学
   phone: 17865197931
   email: i@lanceir.com
   address: 北京市海淀区中关村北二街1号过程工程研究所，100190
